[package]
name = "mcdca"
version = "0.1.0"
edition = "2021"

[dependencies]
rand="0.8.5"
log = "0.4.0"
env_logger = "0.9.0"
clap = { version = "3.1.18", features = ["derive"] }
bioshell-core = { path = "../bioshell4/bioshell-core" }
bioshell-numerical = { path = "../bioshell4/bioshell-numerical" }
bioshell-statistics = { path = "../bioshell4/bioshell-statistics" }
[[bin]]
name = "mcdca"
path = "src/mcdca.rs"
