[package]
name = "mcdca"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "mcdca-lib",
]

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
clap = { version = "3.1.18", features = ["derive"] }

bioshell-core = { path = "../bioshell4/bioshell-core" }
bioshell-sim = { path = "../bioshell4/bioshell-sim" }
bioshell-numerical = { path = "../bioshell4/bioshell-numerical" }
bioshell-statistics = { path = "../bioshell4/bioshell-statistics" }
bioshell-montecarlo = { path = "../bioshell4/bioshell-montecarlo" }

mcdca-lib = {path = "./mcdca-lib"}

[[bin]]
name = "evolver"
path = "src/evolver.rs"
